# bitMan

./: .ghc.environment.x86_64-linux-8.6.5  BitMan.hs  CHANGELOG.md  README.md  bitMan.cabal  hie.yaml
