name:                bitMan
version:             0.1.0.0
license:             ib
license-file:        LICENSE
author:              Ramiro Cufre
maintainer:          ramirocufre@hotmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     BitMan
  build-depends:       base >=4.12 && <4.13
  default-language:    Haskell2010
